fix vh for body + align titles

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@
 /* TYPOGRAPHY AND ELEMENTS */
 body {
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	background: linear-gradient(0deg, rgba(22,22,22,1) 0%, rgba(48,35,59,1) 55%, rgba(60,41,77,1) 68%, rgba(110,66,151,1) 89%, rgba(181,101,255,1) 100%);
 	/* linear-gradient(0deg, rgba(22,22,22,1) 0%, rgba(48,35,59,1) 46%, rgba(60,41,77,1) 58%, rgba(110,66,151,1) 86%, rgba(181,101,255,1) 100%); */
 	/* linear-gradient(0deg, rgba(22,22,22,1) 0%, rgba(48,35,59,1) 42%, rgba(60,41,77,1) 58%, rgba(110,66,151,1) 86%, rgba(181,101,255,1) 100%); */
